--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-icons": "^5.5.0",
     "react-scripts": "5.0.1",
-    "scss": "^0.2.4",
+    "react-toastify": "^11.0.5",
+    "recharts": "^2.15.1",
+    "sass": "^1.85.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -36,5 +39,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "resolve-url-loader": "^3.1.0",
+    "sass-loader": "^10.1.1"
   }
 }
