--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "react-dom": "^19.1.0",
     "react-helmet": "^6.1.0",
     "react-icons": "^5.5.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-toastify": "^11.0.5",
     "recharts": "^2.15.1",
     "sass": "^1.85.1",
